lib/mt/build.log
In file included from lkpool.c:4:
../mt/stkpool.h: In function 'stkpoolpush':
../mt/stkpool.h:41:32: error: lvalue required as left operand of assignment
                 && item->chain = chain
                                ^
In file included from ../mt/lkpool.h:8,
                 from ../mt/stkpool.h:25,
                 from lkpool.c:4:
../mt/stkpool.h:48:53: error: request for member 'data' in something not a structure or union
             if (!(chain = m_atomread(&(pool->tab[ofs.data.chain))))
                                                     ^
../mach/asm.h:15:39: note: in definition of macro 'm_atomread'
 #define m_atomread(a)      (*((typeof(a))(a)))
                                       ^
../mt/stkpool.h:48:64: error: expected ']' before ')' token
             if (!(chain = m_atomread(&(pool->tab[ofs.data.chain))))
                                                                ^
../mach/asm.h:15:39: note: in definition of macro 'm_atomread'
 #define m_atomread(a)      (*((typeof(a))(a)))
                                       ^
../mt/stkpool.h:48:53: error: request for member 'data' in something not a structure or union
             if (!(chain = m_atomread(&(pool->tab[ofs.data.chain))))
                                                     ^
../mach/asm.h:15:43: note: in definition of macro 'm_atomread'
 #define m_atomread(a)      (*((typeof(a))(a)))
                                           ^
../mt/stkpool.h:48:64: error: expected ']' before ')' token
             if (!(chain = m_atomread(&(pool->tab[ofs.data.chain))))
                                                                ^
../mach/asm.h:15:43: note: in definition of macro 'm_atomread'
 #define m_atomread(a)      (*((typeof(a))(a)))
                                           ^
In file included from ../mach/x86/asm.h:21,
                 from ../mach/asm.h:37,
                 from ../mt/lkpool.h:8,
                 from ../mt/stkpool.h:25,
                 from lkpool.c:4:
../mach/x86-64/asm.h:17:38: error: expected identifier before '(' token
 #define m_cmpswapptr(p, want, val)   (m_cmpxchg64ptr(p, want, val) == want)
                                      ^
../mt/stkpool.h:49:20: note: in expansion of macro 'm_cmpswapptr'
                 && m_cmpswapptr((m_atomicptr_t *)&(pool->tab[ofs].data.chain),
                    ^~~~~~~~~~~~
In file included from lkpool.c:4:
../mt/stkpool.h:51:53: error: expected statement before ')' token
                                 (m_atomicptr_t)item)) {
                                                     ^
In file included from ../mt/lkpool.h:8,
                 from ../mt/stkpool.h:25,
                 from lkpool.c:4:
../mt/stkpool.h: In function 'stkpoolpop':
../mach/asm.h:15:29: warning: dereferencing 'void *' pointer
 #define m_atomread(a)      (*((typeof(a))(a)))
                             ^~~~~~~~~~~~~~~~~
../mt/stkpool.h:91:26: note: in expansion of macro 'm_atomread'
             if ((chain = m_atomread((m_atomicptr_t)&(pool->tab[ofs].data.chain)))
                          ^~~~~~~~~~
In file included from lkpool.c:4:
../mt/stkpool.h:91:24: error: void value not ignored as it ought to be
             if ((chain = m_atomread((m_atomicptr_t)&(pool->tab[ofs].data.chain)))
                        ^
../mt/stkpool.h:96:32: warning: passing argument 1 of 'free' discards 'volatile' qualifier from pointer target type [-Wdiscarded-qualifiers]
                 stkpoolputitem(chain);
                                ^~~~~
../mt/stkpool.h:64:34: note: in definition of macro 'stkpoolputitem'
 #define stkpoolputitem(ptr) free(ptr)
                                  ^~~
In file included from lkpool.c:2:
/usr/include/stdlib.h:563:25: note: expected 'void *' but argument is of type 'volatile struct stkitem *'
 extern void free (void *__ptr) __THROW;
                   ~~~~~~^~~~~
lkpool.c: In function 'main':
lkpool.c:11:21: warning: unused variable 'ofs' [-Wunused-variable]
     long            ofs;
                     ^~~
../zero/hash.c: In function 'razohash':
../zero/hash.c:99:19: warning: unused variable 'vp' [-Wunused-variable]
         uint32_t *vp = ptr;
                   ^~
